# Milo

./: .aider.conf.yml  .coverage  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  Milo_Antigravity_Build_Prompts.md  Milo_Platform_Build_Specification.docx  README.md  dev.ps1  inject_rls.py  out.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  scratch_payload.json  scratch_test.py  test_email.py  test_memory.db  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
apps/api/: .coverage  Dockerfile  README.md  capability_check.docx  capability_check.pptx  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  hourly_monitor_handler.py  lambda_handler.py  milo_test.docx  milo_test.pptx  pyproject.toml
apps/api/app/: __init__.py  auth_trigger.py  briefing_handler.py  config.py  main.py  scheduler.py
apps/api/app/middleware/: auth.py  error_handler.py  logging.py  tenant_context.py
apps/api/app/routers/: activities.py  approvals.py  billing.py  files.py  github.py  health.py  inbox.py  integrations.py  jira.py  jobs.py  milos.py  portfolio.py  programs.py  slack.py  stakeholders.py  stubs.py  tenants.py  threads.py  users.py  webhooks.py
apps/api/tests/integration/: conftest.py  test_api.py  test_integrations.py  test_portfolio.py  test_stakeholders.py
apps/api/tests/unit/: test_approvals.py  test_auth.py  test_programs.py
docs/: cost-forecast-poc.md  spec-compliance.md
infra/: approvals_stack.py  cdk_app.py  hourly_monitor_stack.py  scheduler_stack.py
milo_hourly_monitor/: handler.py
scratch/: check_db.py  check_deps.py  check_unmatched.py  test_bedrock_tools.py  update_autonomy.py
(+163 files in other folders)
